--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,17 +1,20 @@
-name: Generate Snake
+name: Generate Snake Animation
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"  
   workflow_dispatch:
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@master
+      - uses: actions/checkout@v4
+      - uses: Platane/snk@v3
         with:
-          github_user_name: AI-AVENGER-S
-          svg_output_path: dist/github-contribution-grid-snake.svg
-      - uses: crazy-max/ghaction-github-pages@v2
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            assets/github-snake.svg
+            assets/github-snake-dark.svg?palette=github-dark
+      - uses: actions/upload-artifact@v3
         with:
-          target_branch: output
-          build_dir: dist
+          name: snake-images
+          path: assets/
