--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,19 +2,30 @@ name: Generate Snake
 on:
   schedule:
     - cron: "0 0 * * *"  
-  workflow_dispatch:     
+  workflow_dispatch:      
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        
       - uses: Platane/snk@v3
         with:
-          github_user_name: ${{ github.repository_owner }}  
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             assets/github-snake.svg
             assets/github-snake-dark.svg?palette=github-dark
-      - uses: actions/upload-artifact@v3
+            
+      - uses: actions/upload-artifact@v4
         with:
           name: snake-images
           path: assets/
+          
+      - name: Commit and Push
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add assets/
+          git commit -m "Update snake animation" || echo "No changes to commit"
+          git push
