--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,31 +1,34 @@
 name: Generate Snake
 on:
   schedule:
-    - cron: "0 0 * * *"  
-  workflow_dispatch:      
+    - cron: "0 0 * * *" 
+  workflow_dispatch:     
+  push:
+    branches: [ main ]   
+
+permissions:
+  contents: write       
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }} 
+          fetch-depth: 0
+
       - uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             assets/github-snake.svg
             assets/github-snake-dark.svg?palette=github-dark
-            
-      - uses: actions/upload-artifact@v4
-        with:
-          name: snake-images
-          path: assets/
-          
+
       - name: Commit and Push
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add assets/
-          git commit -m "Update snake animation" || echo "No changes to commit"
+          git commit -m "Update snake animation [skip ci]" || echo "No changes to commit"
           git push
