--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
+          color: "f75c7e"
           outputs: |
             assets/github-snake.svg
             assets/github-snake-dark.svg?palette=github-dark
