--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            assets/github-snake.svg?palette=.github/palettes/custom.json&v=5
-            assets/github-snake-dark.svg?palette=.github/palettes/custom-dark.json&v=5
+            assets/github-snake.svg
+            assets/github-snake-dark.svg?palette=github-dark
 
       - name: Commit and Push
         run: |
